@@ -1,3 +1,11 @@
+2007-08-16  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Geoff and Adam.
+
+        - Changing stack depth to 500 (from 100 on mac and win) to help out some apps specifically gmail.  <rdar://problem/3590522> JavaScript call stack limit of 99 is too small for some applications; needs to be closer to 500 (4045)
+
+        * kjs/object.cpp:
+
 2007-08-15  Peter Kasting  <zerodpx@gmail.org>
 
         Reviewed by Darin.
